[NARFEX-3] Fix Services title bug on ios

--- a/src/token_landing/containers/Services/Services.less
+++ b/src/token_landing/containers/Services/Services.less
@@ -18,6 +18,10 @@
     max-width: 1033px;
     margin: 86px auto;
   }
+
+  .gradient-text {
+    display: inline-block;
+  }
 }
 
 .gradient-text {
